Restore invalid namespace errors

--- a/crates/transform_rules/tests/fixtures/t07_array_index_paths/rules.yaml
+++ b/crates/transform_rules/tests/fixtures/t07_array_index_paths/rules.yaml
@@ -6,16 +6,16 @@ mappings:
   - target: "items"
     source: "items"
   - target: "first_id"
-    source: "items[0].id"
+    source: "input.items[0].id"
   - target: "second_name"
-    source: "items[1].name"
+    source: "input.items[1].name"
   - target: "flag0"
-    source: "meta.flags[0]"
+    source: "input.meta.flags[0]"
   - target: "flag0_default"
-    source: "meta.flags[0]"
+    source: "input.meta.flags[0]"
     default: false
   - target: "third_id_default"
-    source: "items[2].id"
+    source: "input.items[2].id"
     default: "none"
   - target: "first_item_name"
     expr: { ref: "out.items[0].name" }
