--- a/crates/transform_rules/Cargo.toml
+++ b/crates/transform_rules/Cargo.toml
@@ -8,3 +8,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 csv = "1.3"
+
+[dev-dependencies]
+criterion = "0.5"
