Refine DTO optional handling

--- a/crates/transform_rules/tests/fixtures/dto01_basic/rules.yaml
+++ b/crates/transform_rules/tests/fixtures/dto01_basic/rules.yaml
@@ -25,3 +25,10 @@ mappings:
     source: "user_name"
   - target: "class"
     source: "class"
+  - target: "status"
+    source: "status"
+    default: "active"
+    type: "string"
+  - target: "source"
+    value: "system"
+    type: "string"
