--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -163,7 +163,9 @@ jobs:
 
       - name: Download mcp-publisher
         run: |
-          curl -L "https://github.com/modelcontextprotocol/registry/releases/download/latest/mcp-publisher_linux_amd64.tar.gz" | tar xz mcp-publisher
+          LATEST_TAG=$(curl -s https://api.github.com/repos/modelcontextprotocol/registry/releases/latest | jq -r '.tag_name')
+          echo "Downloading mcp-publisher ${LATEST_TAG}"
+          curl -L "https://github.com/modelcontextprotocol/registry/releases/download/${LATEST_TAG}/mcp-publisher_linux_amd64.tar.gz" | tar xz mcp-publisher
           chmod +x mcp-publisher
 
       - name: Publish to MCP Registry
