Implement `from_entries` operation for JSON transformations
- Added the `from_entries` operation to construct objects from key-value pairs or entries.
- Enhanced evaluation logic to handle one or two arguments, with validation for argument types and structure.
- Updated the validator to include checks for the new operation.
- Introduced comprehensive tests for `from_entries`, covering various scenarios including single pairs and error cases.
- Updated documentation to reflect the new operation and its usage in transformation rules.

--- a/crates/transform_rules/tests/fixtures/t26_chain_all_ops/rules.yaml
+++ b/crates/transform_rules/tests/fixtures/t26_chain_all_ops/rules.yaml
@@ -55,6 +55,33 @@ mappings:
         - { ref: "input.base" }
         - op: "entries"
           args: []
+  - target: "json_from_entries_zip"
+    expr:
+      chain:
+        - { ref: "input.array_values" }
+        - op: "zip"
+          args:
+            - { ref: "input.strings" }
+        - op: "from_entries"
+          args: []
+  - target: "json_from_entries_kv"
+    expr:
+      chain:
+        - { ref: "input.single_key" }
+        - op: "from_entries"
+          args:
+            - { ref: "input.single_value" }
+  - target: "json_from_entries_dupe"
+    expr:
+      chain:
+        - { ref: "input.pairs_with_dupe" }
+        - op: "from_entries"
+          args: []
+  - target: "json_from_entries_object"
+    expr:
+      op: "from_entries"
+      args:
+        - { ref: "input.base" }
   - target: "json_object_flatten"
     expr:
       chain:
