Enhance `from_entries` operation to support both array and object formats
- Updated the `from_entries` operation to accept entries as either arrays of pairs or objects with key-value pairs.
- Improved error handling for invalid entry formats, ensuring robust validation for both types.
- Added new test cases to verify the functionality with various input structures.
- Updated documentation to clarify the accepted formats for the `from_entries` operation.

--- a/crates/transform_rules/tests/fixtures/t26_chain_all_ops/rules.yaml
+++ b/crates/transform_rules/tests/fixtures/t26_chain_all_ops/rules.yaml
@@ -55,6 +55,14 @@ mappings:
         - { ref: "input.base" }
         - op: "entries"
           args: []
+  - target: "json_entries_roundtrip"
+    expr:
+      chain:
+        - { ref: "input.base" }
+        - op: "entries"
+          args: []
+        - op: "from_entries"
+          args: []
   - target: "json_from_entries_zip"
     expr:
       chain:
