--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ members = [
     "crates/rulemorph",
     "crates/rulemorph_cli",
     "crates/rulemorph_mcp",
+    "crates/rulemorph_ui",
 ]
 resolver = "2"
