--- a/crates/rulemorph_cli/Cargo.toml
+++ b/crates/rulemorph_cli/Cargo.toml
@@ -16,6 +16,8 @@ path = "src/main.rs"
 clap = { version = "4.5", features = ["derive"] }
 serde_json = "1.0"
 rulemorph = { path = "../rulemorph" }
+rulemorph_ui = { path = "../rulemorph_ui" }
+tokio = { version = "1", features = ["rt-multi-thread"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
