--- a/crates/rulemorph_endpoint/Cargo.toml
+++ b/crates/rulemorph_endpoint/Cargo.toml
@@ -17,7 +17,7 @@ rulemorph = { path = "../rulemorph" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "net"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "net", "io-util"] }
 tracing = "0.1"
 url = "2.5"
 uuid = { version = "1.8", features = ["v4"] }
